--- a/FishandFishs/src/Views/adminPage.fxml
+++ b/FishandFishs/src/Views/adminPage.fxml
@@ -41,11 +41,6 @@
             <VBox fx:id="itemsPane" prefHeight="194.0" prefWidth="975.0" spacing="10.0" style="-fx-background-color: F7F7F7;" />
          </content>
       </ScrollPane>
-      <Button layoutX="14.0" layoutY="10.0" mnemonicParsing="false" onAction="#goBackToCatalogue" prefHeight="43.0" prefWidth="78.0" style="-fx-background-color: transparent; -fx-border-color: trasnparent;" text="Back" underline="true">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
       <Label layoutX="485.0" layoutY="16.0" prefHeight="32.0" prefWidth="133.0" text="All Products">
          <font>
             <Font size="22.0" />
@@ -57,5 +52,10 @@
          </image>
       </ImageView>
       <Pane fx:id="chartPane" layoutX="299.0" layoutY="354.0" prefHeight="393.0" prefWidth="455.0" />
+      <Button fx:id="back" layoutX="31.0" layoutY="13.0" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: transparent;" text="Back" underline="true">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
