--- a/FishandFishs/src/Views/adminPage.fxml
+++ b/FishandFishs/src/Views/adminPage.fxml
@@ -51,8 +51,8 @@
             <Image url="@../images/LOGO%202_1.png" />
          </image>
       </ImageView>
-      <Pane fx:id="chartPane" layoutX="299.0" layoutY="354.0" prefHeight="393.0" prefWidth="455.0" />
-      <Button fx:id="back" layoutX="31.0" layoutY="13.0" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: transparent;" text="Back" underline="true">
+      <Pane fx:id="chartPane" layoutX="277.0" layoutY="354.0" prefHeight="393.0" prefWidth="465.0" />
+      <Button fx:id="back" layoutX="31.0" layoutY="13.0" mnemonicParsing="false" onAction="#backToLandingPage" style="-fx-background-color: transparent; -fx-border-color: transparent;" text="Back" underline="true">
          <font>
             <Font size="19.0" />
          </font>
